--- a/src/Assets/Styles/banner.css
+++ b/src/Assets/Styles/banner.css
@@ -1,3 +1,46 @@
+.Banner {
+  font-family: "Inconsolata", monospace;
+  width: 100%;
+  height: 60vh;
+  background: url("../Imgs/stars-moon-design-coffee 1.png") no-repeat center;
+  background-size: cover;
+  position: relative;
+}
+.Banner .banner-content {
+  position: absolute;
+  top: 50%;
+  left: 15%;
+  transform: translate(-50%, -50%);
+}
+.Banner .banner-content .banner-text {
+  width: 70%;
+  color: black;
+  font-weight: 300;
+  font-size: 50px;
+  line-height: 52px;
+}
 
+@media (max-width: 1800px) and (min-device-width: 1018px) {
+  .Banner .banner-content {
+    left: 25%;
+  }
+}
+@media (max-width: 1017px) and (min-device-width: 535px) {
+  .Banner .banner-content {
+    left: 35%;
+  }
+}
+@media (max-width: 534px) {
+  .Banner {
+    height: 70vh;
+  }
+  .Banner .banner-content {
+    left: 35%;
+  }
+  .Banner .banner-content .banner-text {
+    width: 90%;
+    font-size: 60px;
+  }
+}
 
 /*# sourceMappingURL=banner.css.map */
