--- a/src/Assets/Styles/btn.css
+++ b/src/Assets/Styles/btn.css
@@ -1,3 +1,32 @@
-
+.btn-container {
+  position: fixed;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  bottom: 20px;
+  right: 20px;
+  width: 55px;
+  height: 55px;
+  background-color: white;
+  padding: 10px;
+}
+.btn-container .btn {
+  display: flex;
+  justify-content: center;
+  align-self: center;
+  width: 35px;
+  height: 35px;
+  border: 1px solid rgba(150, 75, 0, 0.7);
+  opacity: 1;
+  background-color: white;
+}
+.btn-container .btn i {
+  align-self: center;
+  justify-self: center;
+  color: rgba(150, 75, 0, 0.7);
+}
+.btn-container.opacity {
+  display: none;
+}
 
 /*# sourceMappingURL=btn.css.map */
